@@ -1,6 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
+    id 'julb-java11'
 	id 'julb-additional-jars'
 }
 
@@ -14,8 +15,13 @@ dependencies {
 	implementation project(':libraries:library-utility-validator')
 }
 
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF"]
 }
 
 publishing {
