@@ -1,6 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
+    id 'julb-java11'
 	id 'julb-additional-jars'
 }
 
@@ -20,14 +21,18 @@ dependencies {
 	implementation 'org.bouncycastle:bcprov-jdk15on'
 	implementation 'org.bouncycastle:bcpkix-jdk15on'
 	
-	//testImplementation project(':libraries:library-logging-test')
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testImplementation 'org.json:json'
 	testImplementation 'net.javacrumbs.json-unit:json-unit'
 }
 
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF"]
 }
 
 publishing {
