@@ -1,6 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
+    id 'julb-java11'
 	id 'julb-additional-jars'
 }
 
@@ -24,8 +25,13 @@ dependencies {
 	testImplementation project(':spring-boot-starters:spring-boot-starter-test')
 }
 
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 publishing {
