@@ -1,6 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
+    id 'julb-java11'
 	id 'julb-additional-jars'
 }
 
@@ -18,8 +19,13 @@ dependencies {
 	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support'
 }
 
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 publishing {
